# AskNust

./: .gitignore  README.md  handbook_working.py  indexing.py  main.go  pyproject.toml  search.py  testing.py  testing2.py  working.py
Backend/: basics.ipynb  finalscrap.py  main.py  main2.py  main3.py  pyproject.toml  requirements.txt  scrap.py  search.py  working.py
Backend/config/: database.py
Backend/models/: user.py
Backend/repositories/: user_repository.py
Backend/routers/: auth.py  chat.py
Backend/routes/: userHandler.py
Backend/test/: hostel_working.py  test.py  testing2.py  testing3.py
Backend/utils/: auth.py
Frontend/: index.html  package.json
Frontend/src/: App.tsx
Frontend/src/components/: Chat.tsx  ChatInput.tsx  MessageList.tsx  auth.tsx  chatInterface.css  chatInterface.tsx  chatwindow.tsx  login.tsx  sidebar.tsx  signup.tsx
Frontend/src/hooks/: useWebSocket.ts
config/: vector_store.py
utils/: pdf_loader.py  text_splitter.py
