[tool.poetry]
name = "asknust"
version = "0.1.0"
description = ""
authors = ["Samama251251 <samama251251@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
langchain = "^0.3.7"
langchain-community = "^0.3.7"
pypdf = "^5.1.0"
langchain-pinecone = "^0.2.0"
langchain-openai = "^0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
